--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
-image: maven:latest
+image: maven:3.3.9-jdk-8
 
 stages:
+  - validate
   - build
+  - test
   - deploy
 
 variables:
@@ -13,13 +15,23 @@ cache:
     - .m2/repository/
     - target/
 
+validate:
+  stage: valdiate
+  script:
+    - mvn $MAVEN_CLI_OPTS verify
+
 build:
   stage: build
   script:
-    - mvn $MAVEN_CLI_OPTS clean install
+    - mvn $MAVEN_CLI_OPTS package -Dmaven.test.skip=true
   artifacts:
     paths:
       - target/
+
+test:
+  stage: test
+  script:
+    - mvn $MAVEN_CLI_OPTS test
 
 deploy:
   stage: deploy
