Just a backup. Now I have to setup all the depends on my own, it's going to be a huge task...

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <url>https://repo.mineacademy.org/repository/external-plugins/</url>
         </repository>
         <repository>
+            <id>mineacademy-repo</id>
+            <url>https://repo.mineacademy.org/repository/maven-public/</url>
+        </repository>
+        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
@@ -80,162 +84,162 @@
         </dependency>
 
         <!-- MineAcademy guaranteed availability repos for plugins -->
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>authme</artifactId>
-            <version>5.6.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>citizens-api</artifactId>
-            <version>2.0.26</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>cmi</artifactId>
-            <version>8.6.20.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>discordsrv</artifactId>
-            <version>1.19.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>essentialsx</artifactId>
-            <version>2.17.2.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>factions</artifactId>
-            <version>3.3.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>factions-uuid</artifactId>
-            <version>1.6.9.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>jobs</artifactId>
-            <version>4.15.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>lockette-pro</artifactId>
-            <version>2.9.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>lwc</artifactId>
-            <version>2.2.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>massive-core</artifactId>
-            <version>3.3.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>mcmmo</artifactId>
-            <version>2.1.128</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>multiverse-core</artifactId>
-            <version>4.1.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>mvdw-placeholder-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>mythicmobs</artifactId>
-            <version>4.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>nuvotifier</artifactId>
-            <version>2.6.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>placeholder-api</artifactId>
-            <version>2.10.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>plotsquared</artifactId>
-            <version>5.4.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>protocollib</artifactId>
-            <version>4.5.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>residence</artifactId>
-            <version>4.8.8.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>simpleclans</artifactId>
-            <version>2.12.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>towny</artifactId>
-            <version>0.95.2.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>towny-chat</artifactId>
-            <version>0.63</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>vault</artifactId>
-            <version>1.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>worldedit</artifactId>
-            <version>7.2.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mineacademy.plugins.external</groupId>
-            <artifactId>worldguard</artifactId>
-            <version>7.0.3-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>authme</artifactId>-->
+<!--            <version>5.6.0-SNAPSHOT</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>citizens-api</artifactId>-->
+<!--            <version>2.0.26</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>cmi</artifactId>-->
+<!--            <version>8.6.20.3</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>discordsrv</artifactId>-->
+<!--            <version>1.19.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>essentialsx</artifactId>-->
+<!--            <version>2.17.2.3</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>factions</artifactId>-->
+<!--            <version>3.3.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>factions-uuid</artifactId>-->
+<!--            <version>1.6.9.5</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>jobs</artifactId>-->
+<!--            <version>4.15.5</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>lockette-pro</artifactId>-->
+<!--            <version>2.9.5</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>lwc</artifactId>-->
+<!--            <version>2.2.5</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>massive-core</artifactId>-->
+<!--            <version>3.3.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>mcmmo</artifactId>-->
+<!--            <version>2.1.128</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>multiverse-core</artifactId>-->
+<!--            <version>4.1.1-SNAPSHOT</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>mvdw-placeholder-api</artifactId>-->
+<!--            <version>3.0.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>mythicmobs</artifactId>-->
+<!--            <version>4.7.2</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>nuvotifier</artifactId>-->
+<!--            <version>2.6.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>placeholder-api</artifactId>-->
+<!--            <version>2.10.4</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>plotsquared</artifactId>-->
+<!--            <version>5.4.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>protocollib</artifactId>-->
+<!--            <version>4.5.1-SNAPSHOT</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>residence</artifactId>-->
+<!--            <version>4.8.8.2</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>simpleclans</artifactId>-->
+<!--            <version>2.12.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>towny</artifactId>-->
+<!--            <version>0.95.2.0</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>towny-chat</artifactId>-->
+<!--            <version>0.63</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>vault</artifactId>-->
+<!--            <version>1.7.2</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>worldedit</artifactId>-->
+<!--            <version>7.2.0-SNAPSHOT</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
+<!--            <artifactId>worldguard</artifactId>-->
+<!--            <version>7.0.3-SNAPSHOT</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
