setup own depends

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <jarPath>C:/Users/LU__LU/Desktop/java/Librarys/Plugins</jarPath>
     </properties>
 
     <distributionManagement>
@@ -83,163 +84,190 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- MineAcademy guaranteed availability repos for plugins -->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>authme</artifactId>-->
-<!--            <version>5.6.0-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>citizens-api</artifactId>-->
-<!--            <version>2.0.26</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>cmi</artifactId>-->
-<!--            <version>8.6.20.3</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>discordsrv</artifactId>-->
-<!--            <version>1.19.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>essentialsx</artifactId>-->
-<!--            <version>2.17.2.3</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>factions</artifactId>-->
-<!--            <version>3.3.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>factions-uuid</artifactId>-->
-<!--            <version>1.6.9.5</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>jobs</artifactId>-->
-<!--            <version>4.15.5</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>lockette-pro</artifactId>-->
-<!--            <version>2.9.5</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>lwc</artifactId>-->
-<!--            <version>2.2.5</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>massive-core</artifactId>-->
-<!--            <version>3.3.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>mcmmo</artifactId>-->
-<!--            <version>2.1.128</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>multiverse-core</artifactId>-->
-<!--            <version>4.1.1-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>mvdw-placeholder-api</artifactId>-->
-<!--            <version>3.0.1</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>mythicmobs</artifactId>-->
-<!--            <version>4.7.2</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>nuvotifier</artifactId>-->
-<!--            <version>2.6.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>placeholder-api</artifactId>-->
-<!--            <version>2.10.4</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>plotsquared</artifactId>-->
-<!--            <version>5.4.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>protocollib</artifactId>-->
-<!--            <version>4.5.1-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>residence</artifactId>-->
-<!--            <version>4.8.8.2</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>simpleclans</artifactId>-->
-<!--            <version>2.12.1</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>towny</artifactId>-->
-<!--            <version>0.95.2.0</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>towny-chat</artifactId>-->
-<!--            <version>0.63</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>vault</artifactId>-->
-<!--            <version>1.7.2</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>worldedit</artifactId>-->
-<!--            <version>7.2.0-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mineacademy.plugins.external</groupId>-->
-<!--            <artifactId>worldguard</artifactId>-->
-<!--            <version>7.0.3-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <!--         MineAcademy guaranteed availability repos for plugins -->
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>AuthMe</artifactId>
+            <version>5.6.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/AuthMe-5.6.0-SNAPSHOT-2382.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>CitizensAPI</artifactId>
+            <version>2.0.26-b645</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/CitizensAPI-2.0.26-b645.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>CMI</artifactId>
+            <version>8.6.20.3</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/CMI-8.6.20.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>DiscordSRV</artifactId>
+            <version>1.19.0-SNAPSHOT-1583795183</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/DiscordSRV-1.19.0-SNAPSHOT-1583795183.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>EssentialsX</artifactId>
+            <version>2.17.2.3</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/EssentialsX-2.17.2.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Factions</artifactId>
+            <version>3.3.0</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Factions-3.3.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>FactionsUUID</artifactId>
+            <version>1.6.9.5-U0.5.9-b221</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/FactionsUUID-1.6.9.5-U0.5.9-b221.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Jobs</artifactId>
+            <version>4.15.5</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Jobs-4.15.5.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>LockettePro</artifactId>
+            <version>2.9.5</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/LockettePro-2.9.5.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>LWC</artifactId>
+            <version>2.2.5</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/LWC-2.2.5.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>MassiveCore</artifactId>
+            <version>3.3.0</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/MassiveCore-3.3.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>mcMMO</artifactId>
+            <version>2.1.128</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/mcMMO-2.1.128.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Multiverse-Core</artifactId>
+            <version>4.1.1-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Multiverse-Core-4.1.1-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>MVdWPlaceholderAPI</artifactId>
+            <version>3.0.1</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/MVdWPlaceholderAPI-3.0.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>MythicMobs</artifactId>
+            <version>4.7.2</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/MythicMobs-4.7.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>NuVotifier</artifactId>
+            <version>2.6.0</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/NuVotifier-2.6.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>PlaceholderAPI</artifactId>
+            <version>2.10.4</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/PlaceholderAPI-2.10.4.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>PlotSquared</artifactId>
+            <version>5.4</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/PlotSquared-5.4.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.5.1-SNAPSHOT-b447</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/ProtocolLib-4.5.1-SNAPSHOT-b447.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Residence</artifactId>
+            <version>4.8.8.2</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Residence-4.8.8.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>SimpleClans</artifactId>
+            <version>2.8.1</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/SimpleClans-2.8.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Towny</artifactId>
+            <version>0.95.2.0</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Towny-0.95.2.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>TownyChat</artifactId>
+            <version>0.63</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/TownyChat-0.63.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>Vault</artifactId>
+            <version>1.7.2</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/Vault-1.7.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>WorldEdit</artifactId>
+            <version>7.2.0-SNAPSHOT-4910</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/WorldEdit-7.2.0-SNAPSHOT-4910.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mineacademy.plugin</groupId>
+            <artifactId>WorldGuard</artifactId>
+            <version>7.0.3-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${jarPath}/WorldGuard-7.0.3-SNAPSHOT-2020.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
