--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mineacademy.libraries</groupId>
-    <artifactId>foundation</artifactId>
+    <groupId>org.mineacademy</groupId>
+    <artifactId>Foundation</artifactId>
     <version>CustomFork</version>
     <packaging>jar</packaging>
 
