--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: maven:3.3.9-jdk-8
 
 stages:
+  - clean
   - build
   - test
   - deploy
@@ -13,6 +14,11 @@ cache:
   paths:
     - .m2/repository/
     - target/
+
+clean:
+  stage: clean
+  script:
+    - mvn $MAVEN_CLI_OPTS clean
 
 build:
   stage: build
