--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
     - mvn $MAVEN_CLI_OPTS package -Dmaven.test.skip=true
   artifacts:
     paths:
-      - target/
+      - target/*.jar
 
 test:
   stage: test
