--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,15 @@ variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 cache:
+  key: ${CI_COMMIT_REF_SLUG}
   paths:
     - .m2/repository/
-    - target/
 
 clean:
   stage: clean
   script:
     - mvn $MAVEN_CLI_OPTS clean
+  cache: {}
 
 build:
   stage: build
@@ -27,11 +28,19 @@ build:
   artifacts:
     paths:
       - target/*.jar
+  cache:
+    key: ${CI_PIPELINE_ID}-build
+    paths:
+      - target/
 
 test:
   stage: test
   script:
     - mvn $MAVEN_CLI_OPTS test
+  cache:
+    key: ${CI_PIPELINE_ID}-build
+    paths:
+      - target/
 
 deploy:
   stage: deploy
@@ -39,3 +48,7 @@ deploy:
     - mvn $MAVEN_CLI_OPTS deploy -Dmaven.test.skip=true
   only:
     - master
+  cache:
+    key: ${CI_PIPELINE_ID}-build
+    paths:
+      - target/
