--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,7 @@
             <groupId>org.mineacademy.plugins.external</groupId>
             <artifactId>placeholder-api</artifactId>
             <version>2.10.6</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.mineacademy.plugins.external</groupId>
