--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	owner of the MineAcademy.org End User License then you may use it for your 
 	own use in plugins but not for any other purpose. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.mineacademy</groupId>
@@ -42,12 +42,21 @@
 		</dependency>
 
 		<!-- Solves a weird BUILD FAILURE problem, see https://www.spigotmc.org/threads/455923
-            Apparently this is used somewhere in the other jars and causing issues if
-            not stated explicitly -->
-		<dependency>
+			Apparently this is used somewhere in the other jars and causing issues if
+			not stated explicitly -->
+		<!--<dependency>
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations</artifactId>
 			<version>19.0.0</version>
+			<scope>provided</scope>
+		</dependency>-->
+
+		<!-- This is NOT used anywhere in Foundation, only here to prevent compile
+			errors from missing the log4j dependency that is shipped in the server jar -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.3</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -110,6 +119,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mineacademy.plugin</groupId>
+			<artifactId>LandsAPI</artifactId>
+			<version>4.10.18</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>LWC</artifactId>
 			<version>2.2.6</version>
 			<scope>provided</scope>
@@ -123,7 +138,7 @@
 		<dependency>
 			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>mcMMO</artifactId>
-			<version>2.1.138</version>
+			<version>2.1.157</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -158,6 +173,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mineacademy.plugin</groupId>
+			<artifactId>SimpleClans</artifactId>
+			<version>2.14.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>StackMob</artifactId>
 			<version>5.3.4</version>
 			<scope>provided</scope>
@@ -166,6 +187,12 @@
 			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>Towny</artifactId>
 			<version>0.96.2.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mineacademy.plugin</groupId>
+			<artifactId>TownyChat</artifactId>
+			<version>0.82</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
